[gd_scene load_steps=13 format=3 uid="uid://dpn23ckhfuf8p"]

[ext_resource type="Script" path="res://SFX/sfx_manager.gd" id="1_ebamd"]
[ext_resource type="AudioStream" uid="uid://cp7xsbmd2gib8" path="res://SFX/Sounds/School.ogg" id="2_r7dxi"]
[ext_resource type="AudioStream" uid="uid://b2wq50d4erqyn" path="res://SFX/Sounds/die.ogg" id="3_bg12q"]
[ext_resource type="AudioStream" uid="uid://4bdubimucbxh" path="res://SFX/Sounds/glasses_break.ogg" id="4_ujieg"]
[ext_resource type="AudioStream" uid="uid://blpllqgffts46" path="res://SFX/Sounds/ir.ogg" id="5_tb4kp"]
[ext_resource type="AudioStream" uid="uid://dhalmcee315ib" path="res://SFX/Sounds/jump.ogg" id="6_sxjmd"]
[ext_resource type="AudioStream" uid="uid://dh2agyoi7sfuq" path="res://SFX/Sounds/land.ogg" id="7_u2c84"]
[ext_resource type="AudioStream" uid="uid://dm2xfppygbl2l" path="res://SFX/Sounds/menu.ogg" id="8_4bwrd"]
[ext_resource type="AudioStream" uid="uid://c0wsgos8h80h" path="res://SFX/Sounds/switch.ogg" id="9_sbvmi"]
[ext_resource type="AudioStream" uid="uid://co7wvq7qdtclo" path="res://SFX/Sounds/walking.ogg" id="10_3ys21"]
[ext_resource type="AudioStream" uid="uid://bkwb7jca3p05n" path="res://SFX/Sounds/drone.ogg" id="11_r3gos"]
[ext_resource type="AudioStream" uid="uid://c7bph4uanvfyt" path="res://SFX/Sounds/glasses_pick_up.ogg" id="12_0872c"]

[node name="Audio" type="Node"]
script = ExtResource("1_ebamd")

[node name="bgm" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_r7dxi")

[node name="death" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_bg12q")

[node name="glasses_break" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_ujieg")

[node name="ir" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_tb4kp")

[node name="jump" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_sxjmd")

[node name="land" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_u2c84")

[node name="menu_click" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_4bwrd")

[node name="switch" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_sbvmi")

[node name="walking" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_3ys21")

[node name="drone" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_r3gos")

[node name="glasses_pick_up" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_0872c")

[connection signal="finished" from="bgm" to="." method="_on_bgm_finished"]
[connection signal="finished" from="walking" to="." method="_on_walking_finished"]
[connection signal="finished" from="drone" to="." method="_on_drone_finished"]
